--- a/python/scripts/scan_directory/scan_ignore_dotnet.yaml
+++ b/python/scripts/scan_directory/scan_ignore_dotnet.yaml
@@ -1,4 +1,7 @@
+# Carpetas a ignorar en el escaneo
 ignore_directories:
+  - node_modules
+  - .git
   - bin
   - obj
   - packages
@@ -6,28 +9,11 @@ ignore_directories:
   - .vscode
   - dist
   - build
-  - node_modules     
-  - .git
 
+# Archivos a ignorar
 ignore_files:
   - "*.log"
   - "*.tmp"
   - "*.cache"
   - ".DS_Store"
-  - "*.user"         # Archivos de configuración específicos de usuario
-  - "*.suo"          # Archivos temporales de Visual Studio
-  - "*.ncb"
-  - "*.sdf"
-  - "*.opensdf"
-  - "*.tlog"
-  - "*.lastbuildstate"
-  - "*.idb"
-  - "*.pdb"
-  - "*.ipch"
-  - "*.aps"
-  - "*.pch"
-  - "*.vspscc"
-  - "*.vssscc"
-  - "*.dbmdl"
-  - "*.bak"
-  - "Thumbs.db"
+  - "*.pyc"
