Add Windows venv instructions; refresh scan output and ignore rules

--- a/python/scripts/scan_directory/scan-config/ignore-rules/scan_ignore_general.yaml
+++ b/python/scripts/scan_directory/scan-config/ignore-rules/scan_ignore_general.yaml
@@ -9,6 +9,10 @@ ignore_directories:
   - .vscode
   - dist
   - build
+  - .venv 
+  - .pytest_cache
+  - .idea
+
 
 # Archivos a ignorar
 ignore_files:
